--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,13 @@ jobs:
         run: |
           kubectl apply -f K8s/frontend-deployment.yaml
           kubectl apply -f K8s/frontend-service.yaml
+          kubectl rollout restart deployment frontend
 
       - name: Deploy backend
         run: |
           kubectl apply -f K8s/backend-deployment.yaml
           kubectl apply -f K8s/backend-service.yaml
+          kubectl rollout restart deployment backend
 
       - name: Apply Ingress
         run: kubectl apply -f K8s/ingress.yaml
