--- a/K8s/backend-deployment.yaml
+++ b/K8s/backend-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: backend
           image: amanclash4321/backend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 4000
           resources:
